--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
+body{
+    background-color: #bfcee5;
+    font-family: 'Montserrat Alternates', sans-serif;
+
+}
+.App{
+    display: flex;
+justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.container{
+width: 400px;
+height: 100vh;
+
+    background-color: #efeac1;
+    display: flex;
+flex-direction: column;
+align-items: center;
+
+}
+h1{
+    display: flex;
+    justify-content: center;
+  font-weight: bold;
+  font-size: 36pt;
+  margin-top: 0;
+  color: #282b52;
+}
+input{
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 14pt;
+    padding: 10px;
+    width: 320px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn{
+    font-family: 'Montserrat Alternates', sans-serif;
+    width: 200px;
+    font-size: 14pt;
+    padding: 5px;
+color: white;
+padding: 8px;
+border: none;
+
+
+
+}
+.add{
+
+    margin-top: 50px;
+
+   background-color: #6dacbc;
+}
+.delete{
+    background-color: #cd5877;
+    margin-top: 20px;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li{
+    color: #282b52;
+    font-size: 16pt;
+    list-style: none;
+  
+    padding: 8px;
 }
-
-.App-link {
-  color: #61dafb;
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checktwo{
+    display: none;
+}
+.crossed{
+    text-decoration: line-through solid 1px #cd5877;
 }
